Fixed the header z-index

--- a/source/scss/blocks/_header.scss
+++ b/source/scss/blocks/_header.scss
@@ -1,6 +1,7 @@
 .header {
   position: sticky;
   top: 0;
+  z-index: 1;
   box-sizing: border-box;
   margin-bottom: 25px;
   background-color: var(--color-dark);
